--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,12 @@
-pool: MyAgentPool
+trigger:
+- main
+
+pool:
+  vmImage: windows-latest
+
+variables:
+  bulidConfiguration: 'Release'
+
 steps:
-- bash: echo hello world
+- script: dotnet build --configuration $(bulidConfiguration)
+  displayName: dotnet build $(bulidConfiguration)
